# FcstVerif2025

./: .gitignore  README.md  computeGloSeaAnomaly.py  config.py  plotDetermSkillScore.py  pyproject.toml  requirements.txt  run_all.py  run_all.sh  settingUpERA5.py  settingUpOISST.py  setup.py  target_grid.nc
.dump/FcstVerif_v2.0/: calcDetermSkillScore.py  calcIndices.py  config.py  plotDetermSkillScore.py  settingUpGloSea.py
dashboard/: app.py  requirements.txt
fcstverif/: config.py  run_all.py  run_analysis.py  run_categorization.py  run_indices.py  run_plotting.py  run_preprocessing.py
fcstverif/analysis/: calcDetermSkillScore.py  calcDetermSkillScore_v250409.py  calcIndices.py  cate_testplot.py  categorizeTercile.py  categorizeTercile_v250513.py  verifyCategory.py
fcstverif/data_prep/: computeGloSeaAnomaly.py  settingUpERA5.py  settingUpERA5_v250415.py  settingUpERA5_v250513.py  settingUpGloSea.py  settingUpOISST.py
fcstverif/fcstverif.egg-info/: PKG-INFO
fcstverif/plotting/: plotDetermSkillScore.py
fcstverif/src/: run_analysis.py  run_categorization.py  run_indices.py  run_plotting.py  run_preprocessing.py
fcstverif/trash/: makeOISSTmask.py  regrid_oisst.py  run_plotting_v250528.py
fcstverif/utils/: general_utils.py
scripts/: run_analysis.py  run_analysis_v250509.py  run_plotting.py  run_preprocessing.py  run_preprocessing_v250417.py  run_preprocessing_v250509.py
src/: run_analysis.py  run_analysis_v250520.py  run_categorization.py  run_indices.py  run_plotting.py  run_preprocessing.py
src/.backups/: run_plotting_v250509.py
trash/: run_all.sh
(+37 files in other folders)
